--- a/cart.html
+++ b/cart.html
@@ -190,7 +190,7 @@
             </div>
             <div>
                 <h3 class="follow-us__heading">Follow us</h3>
-                <a href="coming-soon.html" class="footer-links"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="coming-soon.html" class="footer-links" aria-label="Like This Item"><i class="fa-brands fa-facebook-f"></i></a>
                 <a href="coming-soon.html" class="footer-links"><i class="fa-brands fa-instagram"></i></a>
                 <a href="coming-soon.html" class="footer-links"><i class="fa-brands fa-youtube"></i></a>
                 <a href="coming-soon.html" class="footer-links"><i class="fa-brands fa-linkedin-in"></i></a>
