--- a/coming-soon.html
+++ b/coming-soon.html
@@ -12,11 +12,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/309152690f.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="coming-soon-body">
     <nav class="coming-soon-nav">
         <a href="index.html"><img src="images/Logo-witout-slogan.png" alt="Rainydays logo" class="logo-witout-slogan"></a>
     </nav>
+    <div class="nav-back">
+        <a href="index.html"><i class="fa-solid fa-arrow-left"></i> Back</a> 
+    </div>
     <section class="coming-soon">
         <h1>Coming Soon</h1>
         <p>Thank you for your patience.</p>
