--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <i class="fa-solid fa-magnifying-glass icon"></i>
                     <i class="fa-solid fa-user icon"></i>
                     <i class="fa-solid fa-heart icon"></i>
-                    <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+                    <a href="cart.html" aria-label="Like This Item"><i class="fa-solid fa-cart-shopping"></i></a>
                 </section>
             </nav>
         </header>
@@ -101,10 +101,10 @@
                 </div>
                 <div>
                     <h3 class="follow-us__heading">Follow us</h3>
-                    <a href="coming-soon.html" class="footer-links"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="coming-soon.html" class="footer-links"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="coming-soon.html" class="footer-links"><i class="fa-brands fa-youtube"></i></a>
-                    <a href="coming-soon.html" class="footer-links"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="coming-soon.html" class="footer-links" aria-label="Like This Item"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="coming-soon.html" class="footer-links" aria-label="Like This Item"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="coming-soon.html" class="footer-links" aria-label="Like This Item"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="coming-soon.html" class="footer-links" aria-label="Like This Item"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
             </section>
             <p>&copy; 2025 Rainydays</p>
