Changed from button to link

--- a/mens-jackets.html
+++ b/mens-jackets.html
@@ -167,7 +167,7 @@
             </div>
         </section>
         <div class="see-more__button">
-            <button class="see-more-button"><a href="coming-soon.html" class="see-more-link">See More</button></a>
+            <a href="coming-soon.html" class="see-more-link see-more-button">See More</a>
         </div>
     </main>
     <footer>
