Added links to heart, user and magnifyer icons

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                     <li><a href="coming-soon.html">About Us</a></li>
                 </ul>
                 <section class="nav-icons">
-                    <i class="fa-solid fa-magnifying-glass icon"></i>
-                    <i class="fa-solid fa-user icon"></i>
-                    <i class="fa-solid fa-heart icon"></i>
+                    <a href="coming-soon.html" aria-label="Like This Item"><i class="fa-solid fa-magnifying-glass icon"></i></a>
+                    <a href="coming-soon.html" aria-label="Like This Item"><i class="fa-solid fa-user icon"></i></a>
+                    <a href="coming-soon.html" aria-label="Like This Item"><i class="fa-solid fa-heart icon"></i></a>
                     <a href="cart.html" aria-label="Like This Item"><i class="fa-solid fa-cart-shopping"></i></a>
                 </section>
             </nav>
