--- a/product.html
+++ b/product.html
@@ -34,9 +34,9 @@
                 <li><a href="coming-soon.html">About Us</a></li>
             </ul>
             <section class="nav-icons">
-                <i class="fa-solid fa-magnifying-glass icon"></i>
-                <i class="fa-solid fa-user icon"></i>
-                <i class="fa-solid fa-heart icon"></i>
+                <a href="coming-soon.html" aria-label="Like This Item"><i class="fa-solid fa-magnifying-glass icon"></i></a>
+                <a href="coming-soon.html" aria-label="Like This Item"><i class="fa-solid fa-user icon"></i></a>
+                <a href="coming-soon.html" aria-label="Like This Item"><i class="fa-solid fa-heart icon"></i></a>
                 <a href="cart.html" aria-label="Like This Item"><i class="fa-solid fa-cart-shopping"></i></a>
             </section>
         </nav>
@@ -96,7 +96,7 @@
                 </div>
                 <details class="product-details">
                     <summary>Product Details</summary>
-                    <p>This softshell Jacket is light and technical.</p>
+                    <p>Stay warm, dry and comfortabel with this softshell jacket. The jacket is light and technical and perfect for both hiking and outdoor adventures as well as for everyday use.</p>
                     <p>Material: 90% Polyester, 10% Elastane.</p>
                 </details>
             </div>
