Added links to the "other" products

--- a/mens-jackets.html
+++ b/mens-jackets.html
@@ -79,8 +79,11 @@
                 </div>     
             </div>
             <div class="product">
-                <img src="images/Jacket-2.jpg" alt="Black Windbreaker Jacket" class="product-image">
-                <h2 class="product-title">Scott Windbreaker 2.0</h2>
+                <h2 class="product-title">
+                    <a href="coming-soon.html"><img src="images/Jacket-2.jpg" alt="Black Windbreaker Jacket" class="product-image">
+                        Scott Windbreaker 2.0
+                    </a>
+                </h2>
                 <div class="colorchoice-medium">
                     <div class="circle-blue"></div>
                     <div class="circle-green"></div> 
@@ -97,8 +100,11 @@
                 </div>
             </div>
             <div class="product">
-                <img src="images/Jacket-3.jpg" alt="Black Jacket" class="product-image">
-                <h2 class="product-title">Scott Nordic Jacket</h2>
+                <h2 class="product-title">
+                    <a href="coming-soon.html"><img src="images/Jacket-3.jpg" alt="Black Jacket" class="product-image">
+                        Scott Nordic jacket
+                    </a>
+                </h2>
                 <div class="colorchoice-medium">
                     <div class="circle-blue"></div> 
                     <div class="circle-green"></div> 
@@ -114,8 +120,11 @@
                 </div>
             </div>
             <div class="product">
-                <img src="images/Jacket-4.jpg" alt="Grey Softshell Jacket" class="product-image">
-                <h2 class="product-title">Scott Softshell Jacket</h2>
+                <h2 class="product-title">
+                    <a href="coming-soon.html"><img src="images/Jacket-4.jpg" alt="Grey Softshell Jacket" class="product-image">
+                    Scott Softshell Jacket
+                    </a>
+                </h2>
                 <div class="colorchoice-medium">
                     <div class="circle-red"></div>
                     <div class="circle-black"></div>
@@ -130,8 +139,11 @@
                 </div>
             </div>
             <div class="product">
-                <img src="images/Jacket-5.jpg" alt="Green Fleece Jacket" class="product-image">
-                <h2 class="product-title">Fleece Jacket</h2>
+                <h2 class="product-title">
+                    <a href="coming-soon.html"><img src="images/Jacket-5.jpg" alt="Green Fleece Jacket" class="product-image">
+                    Fleece Jacket
+                    </a>
+                </h2>
                 <div class="colorchoice-medium">
                     <div class="circle-blue"></div>
                     <div class="circle-yellow"></div>
@@ -149,8 +161,11 @@
                 </div>
             </div>
             <div class="product">
-                <img src="images/Jacket-6.jpg" alt="Grey Insulated Jacket" class="product-image">
-                <h2 class="product-title">Alpha Insulated Jacket</h2>
+                <h2 class="product-title">
+                    <a href="coming-soon.html"><img src="images/Jacket-6.jpg" alt="Grey Insulated Jacket" class="product-image">
+                    Alpha Insulated Jacket
+                    </a>
+                </h2>
                 <div class="colorchoice-medium">
                     <div class="circle-blue"></div>
                     <div class="circle-orange"></div> 
