Added header and footer to the coming soon page

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -12,18 +12,87 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    <link href="css/media.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/309152690f.js" crossorigin="anonymous"></script>
 </head>
 <body class="coming-soon-body">
-    <nav class="coming-soon-nav">
-        <a href="index.html"><img src="images/Logo-witout-slogan.png" alt="Rainydays logo" class="logo-witout-slogan"></a>
-    </nav>
-    <div class="nav-back">
-        <a href="index.html"><i class="fa-solid fa-arrow-left"></i> Back</a> 
-    </div>
-    <section class="coming-soon">
-        <h1>Coming Soon</h1>
-        <p>Thank you for your patience.</p>
-    </section>
+    <header>
+        <nav class="nav__content">
+            <label for="menu-checkbox" id="menu-icon" class="hamburger-icon" aria-label="Like this item"><i class="fa-solid fa-bars"></i></label>
+            <input type="checkbox" id="menu-checkbox">
+            <ul class="nav-links">
+                <li><a href="index.html"><img src="images/Logo-witout-slogan.png" alt="Rainydays logo" class="logo-witout-slogan"></a></li>
+                <li><a href="mens-jackets.html">Men's</a></li>
+                <li><a href="coming-soon.html">Women's</a></li>
+                <li><a href="coming-soon.html">Sale</a></li>
+                <li><a href="coming-soon.html">About Us</a></li>
+            </ul>
+            <section class="nav-icons">
+                <a href="coming-soon.html" aria-label="Like This Item"><i class="fa-solid fa-magnifying-glass icon"></i></a>
+                <a href="coming-soon.html" aria-label="Like This Item"><i class="fa-solid fa-user icon"></i></a>
+                <a href="coming-soon.html" aria-label="Like This Item"><i class="fa-solid fa-heart icon"></i></a>
+                <a href="cart.html" aria-label="Like This Item"><i class="fa-solid fa-cart-shopping"></i></a>
+            </section>
+        </nav>
+    </header>
+    <main class="coming-soon-main">
+        <div class="nav-back">
+            <a href="index.html"><i class="fa-solid fa-arrow-left"></i> Back</a> 
+        </div>
+        <section class="coming-soon">
+            <h1>Coming Soon</h1>
+            <p>Thank you for your patience.</p>
+        </section>
+    </main>
+    <footer>
+        <section class="footer__content">
+            <div>
+                <img src="images/Logo-with-slogan.png" alt="Logo with Slogan" class="logo-with-slogan">
+            </div>
+            <div>
+                <h3 class="footer__headings">Shop</h3>
+                    <ul>
+                        <li><a href="mens-jackets.html" class="footer-links">Men</a></li>
+                        <li><a href="coming-soon.html" class="footer-links">Women</a></li>
+                        <li><a href="coming-soon.html" class="footer-links">Sale</a></li>
+                        <li><a href="coming-soon.html" class="footer-links">Gift Card</a></li>
+                    </ul>
+            </div>
+            <div>
+                <h3 class="footer__headings">My account</h3>
+                    <ul>
+                        <li><a href="coming-soon.html" class="footer-links">Log in/Sign up</a></li>
+                        <li><a href="coming-soon.html" class="footer-links">Order Status</a></li>
+                    </ul>
+            </div>
+            <div>
+                <h3 class="footer__headings">Help</h3>
+                    <ul>
+                        <li><a href="coming-soon.html" class="footer-links">FAQ</a></li>
+                        <li><a href="coming-soon.html" class="footer-links">Shipping and Delivery</a></li>
+                        <li><a href="coming-soon.html" class="footer-links">Return Policies</a></li>
+                        <li><a href="coming-soon.html" class="footer-links">Terms and Conditions</a></li>
+                        <li><a href="coming-soon.html" class="footer-links">Contact Us</a></li>
+                    </ul>
+            </div>
+            <div>
+                <h3 class="footer__headings">About</h3>
+                    <ul>
+                        <li><a href="coming-soon.html" class="footer-links">Rainydays</a></li>
+                        <li><a href="coming-soon.html" class="footer-links">Sustainability</a></li>
+                        <li><a href="coming-soon.html" class="footer-links">Our Stores</a></li>
+                        <li><a href="coming-soon.html" class="footer-links">Blog</a></li>
+                    </ul>
+            </div>
+            <div>
+                <h3 class="follow-us__heading">Follow us</h3>
+                <a href="coming-soon.html" class="footer-links" aria-label="Like This Item"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="coming-soon.html" class="footer-links" aria-label="Like This Item"><i class="fa-brands fa-instagram"></i></a>
+                <a href="coming-soon.html" class="footer-links" aria-label="Like This Item"><i class="fa-brands fa-youtube"></i></a>
+                <a href="coming-soon.html" class="footer-links" aria-label="Like This Item"><i class="fa-brands fa-linkedin-in"></i></a>
+            </div>
+        </section>
+        <p>&copy; 2025 Rainydays</p>
+    </footer>
 </body>
 </html>
