Added scale to navigation and underline to men's jackets

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -22,10 +22,10 @@
             <input type="checkbox" id="menu-checkbox">
             <ul class="nav-links">
                 <li><a href="index.html"><img src="images/Logo-witout-slogan.png" alt="Rainydays logo" class="logo-witout-slogan"></a></li>
-                <li><a href="mens-jackets.html">Men's</a></li>
-                <li><a href="coming-soon.html">Women's</a></li>
-                <li><a href="coming-soon.html">Sale</a></li>
-                <li><a href="coming-soon.html">About Us</a></li>
+                <li><a href="mens-jackets.html" class="header-navigation">Men's</a></li>
+                <li><a href="coming-soon.html" class="header-navigation">Women's</a></li>
+                <li><a href="coming-soon.html" class="header-navigation">Sale</a></li>
+                <li><a href="coming-soon.html" class="header-navigation">About Us</a></li>
             </ul>
             <section class="nav-icons">
                 <a href="coming-soon.html" aria-label="Like This Item"><i class="fa-solid fa-magnifying-glass icon"></i></a>
