--- a/product.html
+++ b/product.html
@@ -28,10 +28,10 @@
             <input type="checkbox" id="menu-checkbox">
             <ul class="nav-links">
                 <li><a href="index.html"><img src="images/Logo-witout-slogan.png" alt="Rainydays logo" class="logo-witout-slogan"></a></li>
-                <li><a href="mens-jackets.html">Men's</a></li>
-                <li><a href="coming-soon.html">Women's</a></li>
-                <li><a href="coming-soon.html">Sale</a></li>
-                <li><a href="coming-soon.html">About Us</a></li>
+                <li><a href="mens-jackets.html" class="header-navigation">Men's</a></li>
+                <li><a href="coming-soon.html" class="header-navigation">Women's</a></li>
+                <li><a href="coming-soon.html" class="header-navigation">Sale</a></li>
+                <li><a href="coming-soon.html" class="header-navigation">About Us</a></li>
             </ul>
             <section class="nav-icons">
                 <a href="coming-soon.html" aria-label="Like This Item"><i class="fa-solid fa-magnifying-glass icon"></i></a>
@@ -85,7 +85,7 @@
             </div>
             <div>
                 <h2 class="h2-heading">Description</h2>
-                <p>This softshell jacket will take your adventures to the next level. It's lightweight, water resistant and wind resistant.</p>
+                <p class="product-details-text">This softshell jacket will take your adventures to the next level. It's lightweight, water resistant and wind resistant.</p>
                 <div class="features water-resistant">
                     <i class="fa-solid fa-umbrella"></i>
                     <p class="features__text">Water Resistant</p>
@@ -96,8 +96,8 @@
                 </div>
                 <details class="product-details">
                     <summary>Product Details</summary>
-                    <p>Stay warm, dry and comfortabel with this softshell jacket. The jacket is light and technical and perfect for both hiking and outdoor adventures as well as for everyday use.</p>
-                    <p>Material: 90% Polyester, 10% Elastane.</p>
+                    <p class="product-details-text">Stay warm, dry and comfortabel with this softshell jacket. The jacket is light and technical and perfect for both hiking and outdoor adventures as well as for everyday use.</p>
+                    <p class="product-details-text">Material: 90% Polyester, 10% Elastane.</p>
                 </details>
             </div>
         </section>
