added the filter on the homepage

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
             </nav>
         </header>
         <main>
+            <select id="genderFilter">
+                <option value="all">All</option>
+                <option value="Female">Female</option>
+                <option value="Male">Male</option>
+            </select>
             <div id="container" class="products__list"></div>
         </main>
         <footer>
