--- a/product.html
+++ b/product.html
@@ -38,7 +38,7 @@
                 <a href="coming-soon.html" aria-label="Like This Item"><i class="fa-solid fa-magnifying-glass icon"></i></a>
                 <a href="coming-soon.html" aria-label="Like This Item"><i class="fa-solid fa-user icon"></i></a>
                 <a href="coming-soon.html" aria-label="Like This Item"><i class="fa-solid fa-heart icon"></i></a>
-                <a href="cart.html" aria-label="Like This Item"><i class="fa-solid fa-cart-shopping"></i></a>
+                <a href="checkout.html" aria-label="Like This Item"><i class="fa-solid fa-cart-shopping cart-icon"><span class="cart-count">0</span></i></a>
             </section>
         </nav>
     </header>
