--- a/confirmation.html
+++ b/confirmation.html
@@ -28,7 +28,7 @@
             <input type="checkbox" id="menu-checkbox">
             <ul class="nav-links">
                 <li><a href="index.html"><img src="images/Logo-witout-slogan.png" alt="Rainydays logo" class="logo-witout-slogan"></a></li>
-                <li><a href="mens-jackets.html" class="header-navigation">Men's</a></li>
+                <li><a href="coming-soon.html" class="header-navigation">Men's</a></li>
                 <li><a href="coming-soon.html" class="header-navigation">Women's</a></li>
                 <li><a href="coming-soon.html" class="header-navigation">Sale</a></li>
                 <li><a href="coming-soon.html" class="header-navigation">About Us</a></li>
@@ -37,7 +37,7 @@
                 <a href="coming-soon.html" aria-label="Like This Item"><i class="fa-solid fa-magnifying-glass icon"></i></a>
                 <a href="coming-soon.html" aria-label="Like This Item"><i class="fa-solid fa-user icon"></i></a>
                 <a href="coming-soon.html" aria-label="Like This Item"><i class="fa-solid fa-heart icon"></i></a>
-                <a href="cart.html" aria-label="Like This Item"><i class="fa-solid fa-cart-shopping"></i></a>
+                <a href="checkout.html" aria-label="Like This Item"><i class="fa-solid fa-cart-shopping"></i></a>
             </section>
         </nav>
     </header>
@@ -50,65 +50,6 @@
             <h1 class="confirmation-heading">Thank You!</h1>
             <p class="confirmation-text">Your order WY6547 has been registered. You will receive a confirmation on your email shortly.</p>
         </section>
-        <div class="confirmation__content">
-            <section class="order__summary">
-                <div>
-                    <p class="roboto__700">Order number</p>
-                    <p>WY6547</p>
-                </div>
-                
-                <div>
-                    <p class="roboto__700">Order Date</p>
-                    <p>2025-02-11</p>
-                </div>
-                <div>
-                    <p class="roboto__700">Payment</p>
-                    <p>Visa **** 3248</p>
-                </div>
-                <div>
-                    <p class="roboto__700">Estimated Delivery</p>
-                    <p>2025-02-17</p>
-                </div>
-                <div>
-                    <p class="roboto__700">Shipping Address</p>
-                    <p>John Smith</p>
-                    <p>Mølleparken 4, 0459 Oslo</p>
-                </div>
-            </section>
-            <section class="order-details">
-                <div>
-                    <h2 class="h2-heading">Order Details</h2>
-                </div>
-                    <div class="order-details__content">
-                        <div class="cart-items">
-                        <img src="images/Jacket-1.jpg" alt="Red Softshell Jacket" class="checkout-image">
-                        <div>
-                            <p class="confirmation-details">Endurance Softshell Jacket</p>
-                            <p class="confirmation-details">Color: Red</p>
-                            <p class="confirmation-details">Size: Large</p>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="confirmation-summary confirmation-details">
-                             <p>Subtotal:</p>
-                             <p>$79</p>
-                        </div>
-                        <div class="confirmation-summary confirmation-details">
-                            <p>Shipping:</p>
-                            <p>$0</p>
-                        </div>
-                        <div class="confirmation-summary confirmation-details">
-                            <p>Estimated taxes:</p>
-                            <p>$0</p>
-                        </div>
-                        <div class="confirmation-summary confirmation-details">
-                            <p>Total:</p>
-                            <p>$79</p>
-                       </div>
-                    </div>
-                </div>
-            </section>
-        </div>
         <section class="continue-shopping__confirmation">
             <div class="continue-shopping__button">
                 <a href="index.html" class="continue-shopping">Continue Shopping</a>
