--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <input type="checkbox" id="menu-checkbox">
                 <ul class="nav-links">
                     <li><a href="index.html"><img src="images/Logo-witout-slogan.png" alt="Rainydays logo" class="logo-witout-slogan"></a></li>
-                    <li><a href="mens-jackets.html" id="mens-navigation" class="header-navigation">Men's</a></li>
+                    <li><a href="coming-soon.html" id="mens-navigation" class="header-navigation">Men's</a></li>
                     <li><a href="coming-soon.html" class="header-navigation">Women's</a></li>
                     <li><a href="coming-soon.html" class="header-navigation">Sale</a></li>
                     <li><a href="coming-soon.html" class="header-navigation">About Us</a></li>
