--- a/checkout.html
+++ b/checkout.html
@@ -29,7 +29,7 @@
             <input type="checkbox" id="menu-checkbox">
             <ul class="nav-links">
                 <li><a href="index.html"><img src="images/Logo-witout-slogan.png" alt="Rainydays logo" class="logo-witout-slogan"></a></li>
-                <li><a href="mens-jackets.html" class="header-navigation">Men's</a></li>
+                <li><a href="coming-soon.html" class="header-navigation">Men's</a></li>
                 <li><a href="coming-soon.html" class="header-navigation">Women's</a></li>
                 <li><a href="coming-soon.html" class="header-navigation">Sale</a></li>
                 <li><a href="coming-soon.html" class="header-navigation">About Us</a></li>
@@ -44,82 +44,13 @@
     </header>
     <main class="main__content">
         <nav class="nav-back breadcrumbs__content">
-            <a href="cart.html"><i class="fa-solid fa-arrow-left"></i> Back</a> 
+            <a href="index.html"><i class="fa-solid fa-arrow-left"></i> Back</a> 
        </nav>
         <h1 class="h1-headings">Checkout</h1>
         <div class="cart-container"></div>
         <p class="total-price"></p>
         <button class="clear-cart-button">Clear cart</button>
-        <div class="checkout__content">
-            <form class="checkout-form">
-                <fieldset class="billing-payment-form">
-                    <legend>Billing Address</legend>
-                    <label for="firstname" class="checkout-info">First Name</label>
-                    <input type="text" id="firstname" name="firstname" title="Enter Your First Name" class="form__input billing__info" required>
-                    <label for="lastname" class="checkout-info">Last Name</label>
-                    <input type="text" id="lastname" name="lastname" title="Enter Your Last Name" class="form__input billing__info" required>
-                    <label for="address" class="checkout-info">Address</label>
-                    <input type="text" id="address" name="address" title="Enter Your Address" class="form__input billing__info" required>
-                    <label for="zipcode" class="checkout-info">Zip Code</label>
-                    <input type="tel" id="zipcode" name="zipcode" title="Enter Your Zip Code" class="form__input billing__info" required>
-                    <label for="city" class="checkout-info">City</label>
-                    <input type="text" id="city" name="city" title="Enter Your City" class="form__input billing__info" required>
-                    <label for="phonenumber" class="checkout-info">Phone Number</label>
-                    <input type="tel" id="phonenumber" name="phonenumber" title="Enter Your Phone Number" class="form__input billing__info" required>
-                    <label for="email" class="checkout-info">Email</label>
-                    <input type="email" id="email" name="email" title="Enter Your Email" class="form__input billing__info" required>
-                </fieldset>
-                <fieldset class="billing-payment-form">
-                    <legend>Delivery Method</legend>
-                    <div class="delivery-method">
-                        <input type="radio" id="standard" name="delivery" value="standard" class="form__input" checked>
-                        <label for="standard" class="checkout-info">Standard (4-5 business days) Free</label>
-                    </div>
-                    <div class="delivery-method">
-                        <input type="radio" id="express" name="delivery" value="express" class="form__input">
-                        <label for="express" class="checkout-info">Express (1-2 business days) $9</label>
-                    </div>
-                </fieldset>
-                <fieldset class="billing-payment-form">
-                    <legend>Payment Details</legend>
-                    <div class="payment-method creditcard-info">
-                        <div class="payment-method creditcard">
-                            <input type="radio" id="creditcard" name="payment" value="creditcard" class="form__input" checked>
-                            <label for="creditcard" class="checkout-info">Credit Card</label>
-                        </div>
-                        <div>
-                            <label for="creditcardnumber" class="checkout-info">Card Number</label>
-                            <input type="tel" id="creditcardnumber" name="creditcardnumber" title="Enter Your Card Number" class="form__input payment__info" required>
-                            <label for="cardholdername" class="checkout-info">Cardholder Name</label>
-                            <input type="text" id="cardholdername" name="cardholdername" title="Enter Cardholder Name" class="form__input payment__info" required>
-                            <label for="expirationdate" class="checkout-info">Expiration Date</label>
-                            <input type="tel" id="expirationdate" name="expirationdate" title="Enter Expiration Date" class="form__input payment__info" placeholder="MM.YYYY" required>
-                            <label for="cvv" class="checkout-info">CVV</label>
-                            <input type="tel" id="cvv" name="cvv" title="Enter CVV code" class="form__input payment__info" required>
-                        </div>
-                    </div>
-                <div class="payment-method">
-                        <input type="radio" id="Paypal" name="payment" value="Paypal" class="form__input">
-                        <label for="Paypal" class="checkout-info">Paypal</label>
-                </div>
-                    <div class="payment-method">
-                        <input type="radio" id="Klarna" name="payment" value="Klarna" class="form__input">
-                        <label for="Klarna" class="checkout-info">Klarna</label>
-                    </div>
-                </fieldset>
-                <div class="terms">
-                    <input type="checkbox" id="terms" name="terms" class="form__input" required>
-                    <label for="terms" class="terms-newsletter">I have read and agree to the Terms and Conditions</label>
-                </div>
-                <div class="terms">
-                    <input type="checkbox" id="newsletter" name="newsletter" class="form__input">
-                    <label for="newsletter" class="terms-newsletter">I want to recieve emails with offers, new trends and styles</label>
-                </div>
-                <div class="place-order">
-                    <a href="confirmation.html" class="place-order-button">Place Order</a>
-                </div>
-            </form>
-        </div>    
+        
     </main>
     <footer>
         <section class="footer__content">
