--- a/coming-soon.html
+++ b/coming-soon.html
@@ -22,7 +22,7 @@
             <input type="checkbox" id="menu-checkbox">
             <ul class="nav-links">
                 <li><a href="index.html"><img src="images/Logo-witout-slogan.png" alt="Rainydays logo" class="logo-witout-slogan"></a></li>
-                <li><a href="mens-jackets.html" class="header-navigation">Men's</a></li>
+                <li><a href="coming-soon.html" class="header-navigation">Men's</a></li>
                 <li><a href="coming-soon.html" class="header-navigation">Women's</a></li>
                 <li><a href="coming-soon.html" class="header-navigation">Sale</a></li>
                 <li><a href="coming-soon.html" class="header-navigation">About Us</a></li>
@@ -31,7 +31,7 @@
                 <a href="coming-soon.html" aria-label="Like This Item"><i class="fa-solid fa-magnifying-glass icon"></i></a>
                 <a href="coming-soon.html" aria-label="Like This Item"><i class="fa-solid fa-user icon"></i></a>
                 <a href="coming-soon.html" aria-label="Like This Item"><i class="fa-solid fa-heart icon"></i></a>
-                <a href="cart.html" aria-label="Like This Item"><i class="fa-solid fa-cart-shopping"></i></a>
+                <a href="checkout.html" aria-label="Like This Item"><i class="fa-solid fa-cart-shopping"></i></a>
             </section>
         </nav>
     </header>
